--- a/myproject/main/templates/about.html
+++ b/myproject/main/templates/about.html
@@ -2,10 +2,11 @@
 
 {% block content2 %}
     <h3>About page</h3>
-    {% for i in NAME %}
-        <h4>Counter: {{ i }} </h4>
-    {% endfor %}
+    <h1>The user you created now.</h1>
+    <p>Name: {{ new_user.name }}</p>
+    <p>Roll: {{ new_user.roll }}</p>
     <a href="{% url 'home' %}">Home</a>
+    <a href="{% url 'contact' %}">Contact</a>
 {% endblock content2 %}
 
 {% block title %}
