--- a/myproject/main/templates/contact.html
+++ b/myproject/main/templates/contact.html
@@ -2,6 +2,13 @@
 
 {% block content2 %}
     <h3>Contact page</h3>
+
+    <ul>
+        {% for user in all_user %}
+            <li> Name: {{ user.name }} - Roll: {{ user.roll }}</li>
+        {% endfor %}
+    </ul>
+
     <a href="{% url 'home' %}">Home</a>
 {% endblock content2 %}
 
