--- a/myproject/main/templates/posts.html
+++ b/myproject/main/templates/posts.html
@@ -1,10 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content2 %}
-    <h3>About page</h3>
+    <h3>All post page</h3>
     <a href="{% url 'home' %}">Home</a>
     <a href="{% url 'about' %}">About</a>
     <a href="{% url 'contact' %}">Contact</a>
+
+    <br>
+    <br>
+    {{ id }} ... {{ roll }}
 {% endblock content2 %}
 
 {% block title %}
